# clice

./: CMakeLists.txt  LICENSE  README.md  clice-config.cmake  cpm.dependencies  cpmpack.json  cron_daily_cpm_version.yml
.github/workflows/: ci_license_check.yml  ci_linux.yml  ci_macos.yml  ci_msvc.yml  ci_on_pr.yml  cron_daily_cpm_version.yml  cron_weekly.yml  tests.yml
lib/tool_description_lib/: .gitrepo  .gitrepo.license
share/: bash_completion  zsh_completion
src/clice/: Argument.h  CMakeLists.txt  clice.h  completion.h  generateCWL.h  generateHelp.h  parse.h  parseString.h  printCompletion.h
src/clice-demo/: CMakeLists.txt  main.cpp
src/clice-demo2/: CMakeLists.txt  main.cpp
src/test_clice/: CMakeLists.txt  main.cpp  secondtu.cpp  someheader.h
src/test_header/: CMakeLists.txt
